force-app/main/default/objects/Coupon_Code__c/Coupon_Code__c.object-meta.xml
<CustomObject>
    <label>Coupon Code</label>
    <nameField>
        <displayFormat>CPN-{0000}</displayFormat>
        <label>Coupon Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>