force-app/main/default/objects/Coupon_Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>What the shopper types at checkout, e.g. DIWALI10. Unique (case-insensitive) so two campaigns can never issue the same code by accident.</description>
    <label>Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>