force-app/main/default/objects/Coupon_Code__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Lets an admin disable this one code without touching the parent Campaign (which may have other codes still running).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>