force-app/main/default/objects/Coupon_Code__c/fields/Max_Total_Uses__c.field-meta.xml
<CustomField>
    <fullName>Max_Total_Uses__c</fullName>
    <description>Optional org-wide redemption cap across all customers combined. Left blank means unlimited (subject only to Max_Uses_Per_Customer__c). Checked against Total_Redemptions__c.</description>
    <label>Max Total Uses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>