force-app/main/default/objects/Coupon_Code__c/fields/Max_Uses_Per_Customer__c.field-meta.xml
<CustomField>
    <fullName>Max_Uses_Per_Customer__c</fullName>
    <defaultValue>1</defaultValue>
    <description>How many times one customer (one Contact) may redeem this code. Default 1 is what enforces &quot;one code, one time per user&quot; — DiscountService checks this against the customer&apos;s existing CampaignMember redemption rows for this code before allowing another.</description>
    <label>Max Uses Per Customer</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>