force-app/main/default/objects/Coupon_Code__c/fields/Total_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Total_Redemptions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>NOT a native Roll-Up Summary — CampaignMember is a standard object and can never sit on the detail side of a Master-Detail relationship, so its link back to this record (Coupon_Code__c) is a plain Lookup, which Roll-Up Summary fields cannot summarize across. Maintained instead by Apex: DiscountService increments this by 1 each time it inserts a CampaignMember redemption row for this code.</description>
    <label>Total Redemptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>